--- a/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/src/app/frontend/components/restaurant/restaurant.component.html
@@ -1,78 +1,58 @@
 <!-- carousel -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/img/dishes/car1.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-      <div class="container">
+
+<div class="row mb-4">
+  <div class="col-lg-12">
+    <ngb-carousel *ngIf="images">
+      <ng-template ngbSlide>
+        <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption">
-          <h1 class="cslider">RESTAURANT</h1>
-          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+          <h3>RESTAURANT</h3>
+          <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
             geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
             vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
-          <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal"
-            data-target="#modalReservation">Reserveer
-          </button>
+          <p>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+          </p>
         </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/img/dishes/car2.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-      <div class="container">
+      </ng-template>
+      <ng-template ngbSlide>
+        <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption">
-          <h1 class="cslider">RESTAURANT</h1>
-          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+          <h3>RESTAURANT</h3>
+          <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
             geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
             vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
-          <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal"
-            data-target="#modalReservation">Reserveer
-          </button>
+          <p>
+              <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+            </p>
         </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/img/dishes/car3.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-      <div class="container">
+      </ng-template>
+      <ng-template ngbSlide>
+        <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption">
-          <h1 class="cslider">RESTAURANT</h1>
-          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+          <h3>RESTAURANT</h3>
+          <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
             geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
             vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
-          <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal"
-            data-target="#modalReservation">Reserveer
-          </button>
+          <p>
+              <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+            </p>
         </div>
-      </div>
-    </div>
+      </ng-template>
+    </ngb-carousel>
   </div>
-  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 
 <div class="container mb-4">
-
-  <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal" data-target="#modalReservation">
-    Reserveer
-  </button>
 
   <ngb-accordion [closeOthers]="true" activeIds="">
     <ngb-panel id="static-1" title="Voorgerecht">
@@ -203,80 +183,74 @@
     </ngb-panel>
   </ngb-accordion>
 
-
   <!-- Modal -->
-  <div class="modal fade" id="modalReservation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <h4 class="modal-title w-100 font-weight-bold">Reserveer een tafel</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body mx-3">
-          <form id="formReservation" action="#">
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputVoornaam">Voornaam</label>
-                <input type="text" class="form-control" id="inputVoornaam" placeholder="Voornaam" required>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputAchternaam">Achternaam</label>
-                <input type="text" class="form-control" id="inputAchternaam" placeholder="Achternaam" required>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputPostcode">Postcode</label>
-                <input type="text" class="form-control" id="inputPostcode" placeholder="Postcode" required>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputHuisnummer">Huisnummer</label>
-                <input type="text" class="form-control" id="inputHuisnummer" placeholder="Huisnummer" required>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="inputEmail">Email</label>
-              <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-              <label for="inputTelefoonnummer">Telefoonnummer</label>
-              <input type="tel" class="form-control" id="inputTelefoonnummer" placeholder="Telefoonnummer" required>
-            </div>
-            <div class="form-group">
-              <label for="inputAantal">Aantal personen</label>
-              <select class="form-control" id="inputAantal">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputDatum">Datum</label>
-                <input type="date" class="form-control" id="inputDatum" required>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputTijd">Tijd</label>
-                <input type="time" class="form-control" id="inputTijd" required>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer d-flex justify-content-center">
-          <button class="btn btn-primary" type="submit" form="formReservation">Verzenden</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
+  <ng-template #modalReservation let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Reserveer</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form id="formReservation" action="#">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputVoornaam">Voornaam</label>
+            <input type="text" class="form-control" id="inputVoornaam" placeholder="Voornaam" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputAchternaam">Achternaam</label>
+            <input type="text" class="form-control" id="inputAchternaam" placeholder="Achternaam" required>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputPostcode">Postcode</label>
+            <input type="text" class="form-control" id="inputPostcode" placeholder="Postcode" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputHuisnummer">Huisnummer</label>
+            <input type="text" class="form-control" id="inputHuisnummer" placeholder="Huisnummer" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail">Email</label>
+          <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
+        </div>
+        <div class="form-group">
+          <label for="inputTelefoonnummer">Telefoonnummer</label>
+          <input type="tel" class="form-control" id="inputTelefoonnummer" placeholder="Telefoonnummer" required>
+        </div>
+        <div class="form-group">
+          <label for="inputAantal">Aantal personen</label>
+          <select class="form-control" id="inputAantal">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputDatum">Datum</label>
+            <input type="date" class="form-control" id="inputDatum" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputTijd">Tijd</label>
+            <input type="time" class="form-control" id="inputTijd" required>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Verzenden</button>
+    </div>
+  </ng-template>
 </div>
