--- a/src/app/backend/backend.component.html
+++ b/src/app/backend/backend.component.html
@@ -19,6 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="backend/kamers">Kamers</a>
                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="backend/kamers-form">Kamer Toevoegen</a>
+                        </li>
                 </ul>
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                     <span>RESTAURANT</span>
