--- a/src/app/backend/components/kamers/kamers.component.html
+++ b/src/app/backend/components/kamers/kamers.component.html
@@ -11,9 +11,10 @@
         <div class="col-2">
             <button type="button" class="btn btn-success" (click)="showFreeRooms()">Free Rooms</button>
           </div>
-        <!--div class="col-2">
-            <button type="button" class="btn btn-warning" (click)="showReservedRooms()">Reserved Rooms</button>
-          </div-->
+        <div class="col-2">
+            <!--button type="button" class="btn btn-warning" (click)="addRoom()">Add Room</button-->
+            <a href="/backend/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a>
+          </div>
         <div class="col-2">
               <button type="button" class="btn btn-danger" (click)="showBookedRooms()">Booked Rooms</button>
         </div>
@@ -32,16 +33,50 @@
         </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let kamer of kamers | kamersfilter:show" >
+          <tr *ngFor="let kamer of kamers | kamersfilter:show">
             <td>{{kamer.kamerNummer}}</td>
             <td>{{kamer.kamerType}}</td>
             <td>{{kamer.kamerLigging}}</td>
             <td>{{kamer.aantalPersonen}}</td>
             <td>{{kamer.prijs |currency:'EUR'}}</td>
-            <td style="text-align: right"><button type="button" class="btn btn-primary btn-sm">Wijzigen</button></td>
+            <td style="text-align: right"><button type="button" class="btn btn-primary btn-sm" (click)="onSelect(kamer)" >Wijzigen</button></td>
             <td style="text-align: right"><button type="button" class="btn btn-danger btn-sm" (click)="deleteRoom(kamer)">Verwijderen</button></td>
           </tr>
       </tbody>
     </table>
   </div>
- 
+
+  <!--div *ngIf="add">
+      <app-kamers-form></app-kamers-form>
+  </div-->
+  <!--app-kamer-detail [kamer]="selectedKamer"></app-kamer-detail-->
+  
+  <div *ngIf="selectedKamer">
+      <h2>{{selectedKamer.kamerNummer | uppercase}} Details</h2>
+      <div><span>Kamernummer: </span>{{selectedKamer.kamerNummer}}</div>
+      <div>
+        <label>Type kamer:
+          <input [(ngModel)]="selectedKamer.kamerType" placeholder="Type kamer">
+          <!--select class="form-control" [(ngModel)]="selectedKamer.KamerType" name="KamerType" placeholder = "kamerType">
+                <option *ngFor="let type of soortkamer" [value]="selectedKamer.KamerType">{{type}}</option>
+          </select-->
+
+        </label>
+      </div>
+      <div>
+          <label>Kamer Ligging:
+            <input [(ngModel)]="selectedKamer.kamerLigging" placeholder="kamer Ligging">
+          </label>
+        </div>
+        <div>
+            <label>Aantal Personen:
+              <input [(ngModel)]="selectedKamer.aantalPersonen" placeholder="Aantal Personen">
+            </label>
+          </div>
+          <div>
+              <label>Prijs:
+                <input [(ngModel)]="selectedKamer.prijs" placeholder="Prijs">
+              </label>
+            </div>
+          <button (click)="goBack()">go back</button>
+  </div>
