--- a/src/app/frontend/components/home/home.component.html
+++ b/src/app/frontend/components/home/home.component.html
@@ -8,7 +8,7 @@
           <div class="carousel-caption">
             <h3>KAMERS</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <a href="/kamers" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
+            <a [routerLink]="['/kamers']" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
           </div>
         </ng-template>
         <ng-template ngbSlide>
@@ -16,7 +16,7 @@
           <div class="carousel-caption">
             <h3>RESTAURANT</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
-            <a href="/restaurant" class="btn btn-primary" role="button"  aria-pressed="true">Boeken</a>
+            <a [routerLink]="['/restaurant']" class="btn btn-primary" role="button"  aria-pressed="true">Boeken</a>
           </div>
         </ng-template>
         <ng-template ngbSlide>
@@ -24,7 +24,7 @@
           <div class="carousel-caption">
             <h3>ACTIVITEITEN</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
-            <a href="/activiteiten" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
+            <a [routerLink]="['/activiteiten']" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
           </div>
         </ng-template>
       </ngb-carousel>
