--- a/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -1,72 +1,38 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/img/activiteit_wandel.png" class="d-block w-100" alt="Wandelen" margin=auto>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1 class="cslider">Wandelen</h1>
-          <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-            porta
-            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
+<div class="row mb-4">
+  <div class="col-lg-12">
+    <ngb-carousel *ngIf="images">
+      <ng-template ngbSlide>
+        <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
+        <div class="carousel-caption carousel-inner-text">
+          <h2>ACTIVITEITEN</h2>
+          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijkt u regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
           <p>
-            <button type="button" class="btn btn-primary" data-toggle="modal"
-                    data-target="#exampleModal">Boeken
-            </button>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
         </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/img/activiteit_wijn.png" class="d-block w-100" alt="Wijn" margin=auto>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1 class="cslider">Wijnproeven</h1>
-          <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-            porta
-            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
+      </ng-template>
+      <ng-template ngbSlide>
+        <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
+        <div class="carousel-caption carousel-inner-text">
+          <h2>ACTIVITEITEN</h2>
+          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijkt u regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
           <p>
-            <button type="button" class="btn btn-primary" data-toggle="modal"
-                    data-target="#exampleModal">Boeken
-            </button>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
         </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/img/activiteit_zeilen.png" class="d-block w-100" alt="Zeilen" margin=auto>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1 class="cslider">Zeilen</h1>
-          <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-            porta
-            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
+      </ng-template>
+      <ng-template ngbSlide>
+        <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
+        <div class="carousel-caption carousel-inner-text">
+          <h2>ACTIVITEITEN</h2>
+          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijkt u regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
           <p>
-            <button type="button" class="btn btn-primary" data-toggle="modal"
-                    data-target="#exampleModal">Boeken
-            </button>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
         </div>
-      </div>
-    </div>
+      </ng-template>
+    </ngb-carousel>
   </div>
-  <br>
-  <br>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 
 <div class="container">
