--- a/src/app/backend/components/restaurant/gerechten/gerechten.component.html
+++ b/src/app/backend/components/restaurant/gerechten/gerechten.component.html
@@ -1,6 +1,6 @@
 <button class="btn btn-primary mt-2" (click)="openFormGerechtModal()">Nieuw</button>
 
-<div class="table-responsive">
+<div class="table-responsive mt-2">
   <table class="table table-striped table-sm">
     <thead>
       <tr>
