--- a/src/app/backend/components/activiteiten/activiteiten.component.html
+++ b/src/app/backend/components/activiteiten/activiteiten.component.html
@@ -1,127 +1,74 @@
-<div class="table-responsive">
-    <table class="table table-striped table-sm">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1,001</td>
-          <td>Lorem</td>
-          <td>ipsum</td>
-          <td>dolor</td>
-          <td>sit</td>
-        </tr>
-        <tr>
-          <td>1,002</td>
-          <td>amet</td>
-          <td>consectetur</td>
-          <td>adipiscing</td>
-          <td>elit</td>
-        </tr>
-        <tr>
-          <td>1,003</td>
-          <td>Integer</td>
-          <td>nec</td>
-          <td>odio</td>
-          <td>Praesent</td>
-        </tr>
-        <tr>
-          <td>1,003</td>
-          <td>libero</td>
-          <td>Sed</td>
-          <td>cursus</td>
-          <td>ante</td>
-        </tr>
-        <tr>
-          <td>1,004</td>
-          <td>dapibus</td>
-          <td>diam</td>
-          <td>Sed</td>
-          <td>nisi</td>
-        </tr>
-        <tr>
-          <td>1,005</td>
-          <td>Nulla</td>
-          <td>quis</td>
-          <td>sem</td>
-          <td>at</td>
-        </tr>
-        <tr>
-          <td>1,006</td>
-          <td>nibh</td>
-          <td>elementum</td>
-          <td>imperdiet</td>
-          <td>Duis</td>
-        </tr>
-        <tr>
-          <td>1,007</td>
-          <td>sagittis</td>
-          <td>ipsum</td>
-          <td>Praesent</td>
-          <td>mauris</td>
-        </tr>
-        <tr>
-          <td>1,008</td>
-          <td>Fusce</td>
-          <td>nec</td>
-          <td>tellus</td>
-          <td>sed</td>
-        </tr>
-        <tr>
-          <td>1,009</td>
-          <td>augue</td>
-          <td>semper</td>
-          <td>porta</td>
-          <td>Mauris</td>
-        </tr>
-        <tr>
-          <td>1,010</td>
-          <td>massa</td>
-          <td>Vestibulum</td>
-          <td>lacinia</td>
-          <td>arcu</td>
-        </tr>
-        <tr>
-          <td>1,011</td>
-          <td>eget</td>
-          <td>nulla</td>
-          <td>Class</td>
-          <td>aptent</td>
-        </tr>
-        <tr>
-          <td>1,012</td>
-          <td>taciti</td>
-          <td>sociosqu</td>
-          <td>ad</td>
-          <td>litora</td>
-        </tr>
-        <tr>
-          <td>1,013</td>
-          <td>torquent</td>
-          <td>per</td>
-          <td>conubia</td>
-          <td>nostra</td>
-        </tr>
-        <tr>
-          <td>1,014</td>
-          <td>per</td>
-          <td>inceptos</td>
-          <td>himenaeos</td>
-          <td>Curabitur</td>
-        </tr>
-        <tr>
-          <td>1,015</td>
-          <td>sodales</td>
-          <td>ligula</td>
-          <td>in</td>
-          <td>libero</td>
-        </tr>
-      </tbody>
-    </table>
+<div class="table-responsive w-100">
+  <br />
+
+  <div class="row">
+    <div class="col-2">
+      <button type="button" class="btn btn-info" (click)="showAllAct()">
+        Alle Activiteiten
+      </button>
+    </div>
+    <div class="col-2">
+      <button type="button" class="btn btn-success" (click)="showFreeAct()">
+        Beschikbare Activiteiten
+      </button>
+    </div>
+
+    <div class="col-2">
+      <button type="button" class="btn btn-warning" (click)="showBookedAct()">
+        Gereserveerde Activiteiten
+      </button>
+    </div>
+    <div class="col-6 text-right">
+        <button type="button" class="btn btn-primary" (click)="openNewFormModal()">Add Activiteit</button>
+      </div>
   </div>
+
+  <br />
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Activiteit</th>
+        <th>Datum</th>
+        <th>Aantalpersonen</th>
+        <th>Prijs</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let activiteit of (activiteiten | activiteitenfilter: show)">
+        <td>{{ activiteit.activiteitNummer }}</td>
+        <td>{{ activiteit.activiteitNaam }}</td>
+        <td>{{ activiteit.activiteitDatum }}</td>
+        <td>{{ activiteit.aantalPersonen }}</td>
+        <td>{{ activiteit.prijs | currency: "EUR" }}</td>
+        <td style="text-align: right">
+          <button type="button" class="btn  btn-sm" (click)="onSelect(activiteit); openEditFormModal()"><img src="../../../../assets/img/edit-btn.jpg" /></button>
+        </td>
+        <td style="text-align: right">
+          <button type="button" class="btn  btn-sm" (click)="onSelect(activiteit); openSm(deleteModal)"><img src="../../../../assets/img/delete-btn.jpg" /></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<ng-template #deleteModal let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Activiteit verwijderen</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group">
+          <P>Activiteitnummer {{selectedActiviteit?.activiteitNummer}} wordt verwijderd.</P>
+          <h3>Weet je het zeker?</h3>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" (click)="deleteAct(selectedActiviteit); modal.close('Save click')">Ja</button>
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Nee</button>
+    </div>
+  </ng-template>
