--- a/frontend/src/app/managementportal/components/kamers/kamers-form/kamers-form.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/kamers-form.component.html
@@ -3,12 +3,7 @@
     <h4 class="modal-title" id="modal-basic-title">
       Kamer Toevoegen / Wijzigen
     </h4>
-    <button
-      type="button"
-      class="close"
-      aria-label="Close"
-      (click)="activeModal.dismiss('Cross click')"
-    >
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -18,146 +13,77 @@
       <form (ngSubmit)="onSubmit()" #kamerForm="ngForm">
         <div class="form-group">
           <label for="kamerNummer">KamerNummer</label>
-          <input
-            type="number"
-            class="form-control"
-            id="kamerNummer"
-            required
-            [(ngModel)]="model.kamerNummer"
-            name="kamerNummer"
-            #kamerNummer="ngModel"
-          />
-          <div
-            [hidden]="kamerNummer.valid || kamerNummer.pristine"
-            class="alert alert-danger"
-          >
+          <input type="number" class="form-control" id="kamerNummer" required [(ngModel)]="model.kamerNummer"
+            name="kamerNummer" #kamerNummer="ngModel" />
+          <div [hidden]="kamerNummer.valid || kamerNummer.pristine" class="alert alert-danger">
             Kamer nummer is verplicht
           </div>
         </div>
 
         <div class="form-group">
           <label for="kamerType">Kamer Type</label>
-          <select
-            class="form-control"
-            id="kamerType"
-            required
-            [(ngModel)]="model.kamerType"
-            name="kamerType"
-            #kamerType="ngModel"
-          >
+          <select class="form-control" id="kamerType" required [(ngModel)]="model.kamerType" name="kamerType"
+            #kamerType="ngModel">
             <option *ngFor="let type of kamerSoort" [value]="type">{{
               type
             }}</option>
           </select>
-          <div
-            [hidden]="kamerType.valid || kamerType.pristine"
-            class="alert alert-danger"
-          >
+          <div [hidden]="kamerType.valid || kamerType.pristine" class="alert alert-danger">
             Kamer Type is verplicht
           </div>
         </div>
 
         <div class="form-group">
           <label for="kamerLigging">Kamer Ligging</label>
-          <select
-            class="form-control"
-            id="KamerLigging"
-            required
-            [(ngModel)]="model.kamerLigging"
-            name="kamerLigging"
-            #kamerLigging="ngModel"
-          >
+          <select class="form-control" id="KamerLigging" required [(ngModel)]="model.kamerLigging" name="kamerLigging"
+            #kamerLigging="ngModel">
             <option *ngFor="let ligging of kamerUitzicht" [value]="ligging">{{
               ligging
             }}</option>
           </select>
-          <div
-            [hidden]="kamerLigging.valid || kamerLigging.pristine"
-            class="alert alert-danger"
-          >
+          <div [hidden]="kamerLigging.valid || kamerLigging.pristine" class="alert alert-danger">
             Kamer ligging is verplicht
           </div>
         </div>
 
         <div class="form-group">
           <label for="aantalPersonen">Aantalpersonen</label>
-          <input
-            type="number"
-            class="form-control"
-            id="aantalPersonen"
-            required
-            [(ngModel)]="model.aantalPersonen"
-            name="aantalPersonen"
-            #aantalPersonen="ngModel"
-          />
-          <div
-            [hidden]="aantalPersonen.valid || aantalPersonen.pristine"
-            class="alert alert-danger"
-          >
+          <input type="number" class="form-control" id="aantalPersonen" required [(ngModel)]="model.aantalPersonen"
+            name="aantalPersonen" #aantalPersonen="ngModel" />
+          <div [hidden]="aantalPersonen.valid || aantalPersonen.pristine" class="alert alert-danger">
             Aantalpersonen is verplicht
           </div>
         </div>
 
         <div class="form-group">
           <label for="prijs">Prijs</label>
-          <input
-            type="number"
-            class="form-control"
-            id="prijs"
-            required
-            [(ngModel)]="model.prijs"
-            name="prijs"
-            #prijs="ngModel"
-          />
-          <div
-            [hidden]="prijs.valid || prijs.pristine"
-            class="alert alert-danger"
-          >
+          <input type="number" class="form-control" id="prijs" required [(ngModel)]="model.prijs" name="prijs"
+            #prijs="ngModel" />
+          <div [hidden]="prijs.valid || prijs.pristine" class="alert alert-danger">
             Prijs is verplicht
           </div>
         </div>
 
         <div class="form-group">
           <label for="status">Status</label>
-          <input
-            type="text"
-            class="form-control"
-            id="status"
-            required
-            [(ngModel)]="model.status"
-            name="status"
-            #status="ngModel"
-          />
-          <div
-            [hidden]="status.valid || status.pristine"
-            class="alert alert-danger"
-          >
+          <input type="text" class="form-control" id="status" required [(ngModel)]="model.status" name="status"
+            #status="ngModel" />
+          <div [hidden]="status.valid || status.pristine" class="alert alert-danger">
             status is verplicht
           </div>
         </div>
 
-        <button
-          type="submit"
-          class="btn btn-success"
-          [disabled]="!kamerForm.form.valid"
-        >
+        <button type="submit" class="btn btn-success mr-2" [disabled]="!kamerForm.form.valid">
           Submit
+        </button>
+        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Save click')">
+          Annuleren
         </button>
       </form>
     </div>
   </div>
-  <div class="modal-footer">
-    <button
-      type="button"
-      class="btn btn-outline-dark"
-      (click)="activeModal.close('Save click')"
-    >
-      Annuleren
-    </button>
-    </div>
 </div>
 
 <div [hidden]="!submitted">
   <app-kamers></app-kamers>
 </div>
-
