--- a/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
@@ -1,4 +1,6 @@
-<button class="btn btn-primary mt-2" (click)="openFormGerechtModal()">Nieuw</button>
+<div class="d-flex justify-content-end mt-2">
+    <button class="btn btn-primary" (click)="openFormGerechtModal()">Nieuw</button>
+</div>
 
 <div class="table-responsive mt-2">
   <table class="table table-striped table-sm">
