--- a/frontend/src/app/managementportal/components/kamers/kamers-form/kamers-form.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/kamers-form.component.html
@@ -73,12 +73,15 @@
           </div>
         </div>
 
-        <button type="submit" class="btn btn-success mr-2" [disabled]="!kamerForm.form.valid">
-          Submit
-        </button>
-        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Save click')">
-          Annuleren
-        </button>
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success" [disabled]="!kamerForm.form.valid">
+            Submit
+          </button>
+          <button type="button" class="btn btn-outline-dark" (click)="activeModal.close()">
+            Annuleren
+          </button>
+        </div>
       </form>
     </div>
   </div>
